<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.github.ivbaranov.mfb.MaterialFavoriteButton
        android:id="@+id/favorite_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#cc0000"
        app:layout_constraintBottom_toTopOf="@+id/charactername"
        app:layout_constraintLeft_toRightOf="@+id/charactername"
        app:layout_constraintRight_toLeftOf="@+id/charactername"
        app:layout_constraintTop_toBottomOf="@+id/charactername"
        app:mfb_color="white"
        app:mfb_type="heart" />

    <TextView
        android:id="@+id/charactername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="10dp"
        android:text="@string/people_name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charactername"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/charactermass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_mass"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charactermass"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/characterhaircolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mass"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_hair_color"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/haircolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/characterhaircolor"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/characterskincolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/haircolor"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_skin_color"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skincolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/characterskincolor"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/charactereyecolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skincolor"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_eye_color"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eyecolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charactereyecolor"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/characterbirthyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eyecolor"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_birth_year"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/birthyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/characterbirthyear"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/charactergender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthyear"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_gender"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charactergender"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/characterhomeworld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_homeworld"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/homeworld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/characterhomeworld"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/charactercreated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeworld"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_created"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charactercreated"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/characteredited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/created"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_edited"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/characteredited"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/characterurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edited"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/people_url"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/characterurl"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view1"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mass"
        android:clipToPadding="false"
        android:scrollbars="vertical" />
</RelativeLayout>
