<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:background="@color/colorPrimary">



        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">



            <ImageView
                android:id="@+id/thumbnail_image_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/arrow_left" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--include layout="@layout/content_detail" /-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/peoplename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="10dp"
                android:text="@string/people_name"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplename"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peopleheight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_height"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peopleheight"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peoplemass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/height"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_mass"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplemass"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peoplehaircolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mass"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_hair_color"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/haircolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplehaircolor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peopleskincolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/haircolor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_skin_color"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/skincolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peopleskincolor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peopleeyecolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skincolor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_eye_color"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/eyecolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peopleeyecolor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peoplebirthyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eyecolor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_birth_year"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/birthyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplebirthyear"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peoplegender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthyear"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_gender"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplegender"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peoplehomeworld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_homeworld"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/homeworld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplehomeworld"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peoplecreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/homeworld"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_created"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peoplecreated"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peopleedited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/created"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_edited"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/edited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peopleedited"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/peopleurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edited"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/people_url"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peopleurl"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="#cc0000"
                app:layout_constraintBottom_toTopOf="@+id/peoplename"
                app:layout_constraintLeft_toRightOf="@+id/peoplename"
                app:layout_constraintRight_toLeftOf="@+id/peoplename"
                app:layout_constraintTop_toBottomOf="@+id/peoplename"
                app:mfb_color="white"
                app:mfb_type="heart" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view1"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plotsynopsis"
                android:clipToPadding="false"
                android:scrollbars="vertical" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>